--- a/automations/front_door.yaml
+++ b/automations/front_door.yaml
@@ -34,6 +34,11 @@
             - service: switch.turn_off
               entity_id: switch.outdoor_front_light
 
+            - service: light.turn_off
+              entity_id:
+                  - light.outside_candy_cane_lights
+                  - light.outside_tree_lights
+
         # ELIF night
         - conditions:
             - condition: template
@@ -44,3 +49,8 @@
           sequence:
             - service: switch.turn_on
               entity_id: switch.outdoor_front_light
+
+            - service: light.turn_on
+              entity_id:
+                  - light.outside_candy_cane_lights
+                  - light.outside_tree_lights
