--- a/popup/sidebar_information.yaml
+++ b/popup/sidebar_information.yaml
@@ -91,7 +91,8 @@ browser_mod:
                 --paper-item-icon-color: {{ '#9e9e9e' if is_state(config.entity, 'healthy') else '#9c2525' }};
                 }
 
-          - type: custom:hui-horizontal-stack-card
+          - type: custom:hui-element
+            card_type: horizontal-stack
             cards:
               - type: custom:button-card
                 name: Restart HA
@@ -190,7 +191,8 @@ browser_mod:
           - entity: sensor.garage_temp_battery
             style: *style_bat
 
-          - type: custom:hui-horizontal-stack-card
+          - type: custom:hui-element
+            card_type: horizontal-stack
             cards:
               - type: custom:button-card
                 name: Restart VPN
@@ -305,7 +307,8 @@ browser_mod:
                   service_data:
                     entity_id: sensor.docker_memory_percent
 
-          - type: custom:hui-horizontal-stack-card
+          - type: custom:hui-element
+            card_type: horizontal-stack
             cards:
               - type: entities
                 entities:
