Added speedtest vpn docker container

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -182,6 +182,7 @@ monitor_docker:
       - youtubedl
       - nzbhydra
       - plex
+      - speedtest_vpn
     rename:
       homeassistant: HomeAssistant
       nzbget: Nzbget
