--- a/include/group.yaml
+++ b/include/group.yaml
@@ -29,6 +29,7 @@ group:
       - sensor.template_unavailable_entities
       - sensor.docker_nzbhydra_health
       - sensor.docker_youtubedl_health
+      - sensor.docker_speedtest_vpn_health
       - sensor.ecobee_next_alarm
       - sensor.ecobee_next_reminder
       - sensor.ecobee_next_timer
