--- a/btn_card_templates/button_card_templates.yaml
+++ b/btn_card_templates/button_card_templates.yaml
@@ -88,6 +88,9 @@
             font-size: 1.34vw;
             letter-spacing: 0.05vw;
           }
+          #state::first-letter {
+            text-transform: uppercase;
+          }
           /* portrait */
           @media screen and (max-width: 1200px) {
             #name, #state {
