--- a/include/light.yaml
+++ b/include/light.yaml
@@ -3,20 +3,8 @@
 #-------------------------------------------
 light:
   - platform: switch
-    name: Tree Lights
-    entity_id: switch.plug_1
-
-  - platform: switch
-    name: Fireplace Lights
-    entity_id: switch.plug_2
-
-  - platform: switch
-    name: Outside Tree Lights
-    entity_id: switch.outdoor_plug_1
-
-  - platform: switch
-    name: Outside Candy Cane Lights
-    entity_id: switch.outdoor_plug_2
+    name: Outside Garage Lights
+    entity_id: switch.outdoor_garage_lights
 
   - platform: switch
     name: Outside Front Door Light
