add css font fallback

--- a/btn_card_templates/button_card_templates.yaml
+++ b/btn_card_templates/button_card_templates.yaml
@@ -48,7 +48,7 @@
         - justify-self: start
         - line-height: 115%
       card:
-        - font-family: Sf Display
+        - font-family: Sf Display, Roboto
         - border-radius: var(--custom-button-card-border-radius)
         - -webkit-tap-highlight-color: rgba(0,0,0,0)
         - transition: none
@@ -161,7 +161,7 @@
       }
 
       .time {
-        font-family: SF Text;
+        font-family: SF Text, Roboto;
         font-size: var(--sidebar-time-font-size);
         font-weight: 200;
         line-height: var(--sidebar-time-line-height);
@@ -176,7 +176,7 @@
       }
 
       p {
-        font-family: SF Display;
+        font-family: Sf Display, Roboto;
         font-size: var(--sidebar-font-size);
         line-height: var(--sidebar-line-height);
         font-weight: 300;
@@ -261,7 +261,7 @@
     styles:
       state:
         - place-self: start
-        - font-family: SF Display
+        - font-family: Sf Display, Roboto
         - font-weight: 400
         - font-size: 1.26vw
         - letter-spacing: 0.05vw
@@ -438,13 +438,13 @@
         padding-right: 2px;
       }
       .title {
-        font-family: SF Text;
+        font-family: SF Text, Roboto;
         font-size: 1.3em;
         font-weight: 500;
         letter-spacing: 0.5px;
       }
       .subtitle {
-        font-family: SF Text;
+        font-family: SF Text, Roboto;
         font-size: 1em;
         white-space: normal;
         padding-left: 3px;
@@ -458,7 +458,7 @@
       }
       ul {
         margin-top: -0.6em;
-        font-family: SF Display;
+        font-family: Sf Display, Roboto;
         font-size: 0.95em;
         letter-spacing: 0.5px;
         padding: 0 0 0 2.5em;
@@ -888,7 +888,7 @@
         - border: '0.2vw solid #292c2e'
       state:
         - font-size: 2.7vw
-        - font-family: SF Mono
+        - font-family: SF Mono, Roboto
         - opacity: 0.65
         - padding: 0.55vw 1.2vw 0.5vw 1.2vw
 
